--- a/systemd/gunicorn.service
+++ b/systemd/gunicorn.service
@@ -7,8 +7,9 @@ After=network.target
 User=ubuntu
 Group=www-data
 WorkingDirectory=/home/ubuntu/watercompass/wcompass
+EnvironmentFile=/home/ubuntu/watercompass/env
 Environment="PATH=/home/ubuntu/watercompass/venv/bin"
-ExecStart=/home/ubuntu/watercompass/venv/bin/gunicorn --access-logfile - --workers 3 --bind unix:/home/ubuntu/watercompass/wcompass.sock wcompass.wsgi:application
+ExecStart=/home/ubuntu/watercompass/venv/bin/gunicorn --access-logfile - --workers 3 --bind unix:/home/ubuntu/watercompass/wcompass.sock wcompass.wsgi:application -e DJANGO_DEBUG=${DJANGO_DEBUG} -e DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
 
 [Install]
 WantedBy=multi-user.target
